.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:34:02 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DSTM32H743ZITx -DSTM32 -DSTM32H7SINGLE -DSTM32H7 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
../Src/syscalls.c: In function '_write':
../Src/syscalls.c:118:2: warning: statement with no effect [-Wunused-value]
  118 |  ITM_SendChar;
      |  ^~~~~~~~~~~~
arm-none-eabi-gcc -o "01_Hello Word.elf" @"objects.list"   -mcpu=cortex-m7 -T"/Users/PedroVitorPereira/Documents/GitHub/Mastering Microncontroller and Embedded Driver Development/01_Hello Word/STM32H743ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_Hello Word.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 01_Hello Word.elf
 
arm-none-eabi-size   01_Hello\ Word.elf 
arm-none-eabi-objdump -h -S  01_Hello\ Word.elf  > "01_Hello Word.list"
   text	   data	    bss	    dec	    hex	filename
   5420	    108	   1588	   7116	   1bcc	01_Hello Word.elf
Finished building: default.size.stdout
 
Finished building: 01_Hello Word.list
 
21:34:41 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DSTM32H743ZITx -DSTM32 -DSTM32H7SINGLE -DSTM32H7 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
../Src/syscalls.c: In function '_write':
../Src/syscalls.c:118:2: error: too few arguments to function 'ITM_SendChar'
  118 |  ITM_SendChar();
      |  ^~~~~~~~~~~~
../Src/syscalls.c:47:6: note: declared here
   47 | void ITM_SendChar(uint8_t ch)
      |      ^~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/syscalls.o] Error 1
"make -j3 all" terminated with exit code 2. Build might be incomplete.
21:36:41 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DSTM32H743ZITx -DSTM32 -DSTM32H7SINGLE -DSTM32H7 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc -o "01_Hello Word.elf" @"objects.list"   -mcpu=cortex-m7 -T"/Users/PedroVitorPereira/Documents/GitHub/Mastering Microncontroller and Embedded Driver Development/01_Hello Word/STM32H743ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_Hello Word.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 01_Hello Word.elf
 
arm-none-eabi-size   01_Hello\ Word.elf 
arm-none-eabi-objdump -h -S  01_Hello\ Word.elf  > "01_Hello Word.list"
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
Finished building: 01_Hello Word.list
 
21:42:17 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:42:48 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:44:32 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:45:44 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DSTM32H743ZITx -DSTM32 -DSTM32H7SINGLE -DSTM32H7 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "01_Hello Word.elf" @"objects.list"   -mcpu=cortex-m7 -T"/Users/PedroVitorPereira/Documents/GitHub/Mastering Microncontroller and Embedded Driver Development/01_Hello Word/STM32H743ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_Hello Word.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 01_Hello Word.elf
 
arm-none-eabi-size   01_Hello\ Word.elf 
arm-none-eabi-objdump -h -S  01_Hello\ Word.elf  > "01_Hello Word.list"
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
Finished building: 01_Hello Word.list
 
21:45:51 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:48:04 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DSTM32H743ZITx -DSTM32 -DSTM32H7SINGLE -DSTM32H7 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "01_Hello Word.elf" @"objects.list"   -mcpu=cortex-m7 -T"/Users/PedroVitorPereira/Documents/GitHub/Mastering Microncontroller and Embedded Driver Development/01_Hello Word/STM32H743ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_Hello Word.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 01_Hello Word.elf
 
arm-none-eabi-size   01_Hello\ Word.elf 
arm-none-eabi-objdump -h -S  01_Hello\ Word.elf  > "01_Hello Word.list"
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
Finished building: 01_Hello Word.list
 
21:50:22 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:50:42 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
21:56:05 **** Incremental Build of configuration Debug for project 01_Hello Word ****
make -j3 all 
arm-none-eabi-size   01_Hello\ Word.elf 
   text	   data	    bss	    dec	    hex	filename
   5508	    108	   1588	   7204	   1c24	01_Hello Word.elf
Finished building: default.size.stdout
 
